@@ -82,16 +82,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Locale
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Map
 import|;
 end_import
@@ -221,20 +211,6 @@ operator|.
 name|distance
 operator|.
 name|DistanceUtils
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|spatial4j
-operator|.
-name|core
-operator|.
-name|io
-operator|.
-name|LegacyShapeReadWriterFormat
 import|;
 end_import
 
@@ -868,107 +844,6 @@ argument_list|,
 name|args
 argument_list|)
 expr_stmt|;
-comment|//replace legacy rect format with ENVELOPE
-name|String
-name|wbStr
-init|=
-name|args
-operator|.
-name|get
-argument_list|(
-literal|"worldBounds"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|wbStr
-operator|!=
-literal|null
-operator|&&
-operator|!
-name|wbStr
-operator|.
-name|toUpperCase
-argument_list|(
-name|Locale
-operator|.
-name|ROOT
-argument_list|)
-operator|.
-name|startsWith
-argument_list|(
-literal|"ENVELOPE"
-argument_list|)
-condition|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"Using old worldBounds format? Should use ENVELOPE(xMin, xMax, yMax, yMin)."
-argument_list|)
-expr_stmt|;
-name|String
-index|[]
-name|parts
-init|=
-name|wbStr
-operator|.
-name|split
-argument_list|(
-literal|" "
-argument_list|)
-decl_stmt|;
-comment|//"xMin yMin xMax yMax"
-if|if
-condition|(
-name|parts
-operator|.
-name|length
-operator|==
-literal|4
-condition|)
-block|{
-name|args
-operator|.
-name|put
-argument_list|(
-literal|"worldBounds"
-argument_list|,
-literal|"ENVELOPE("
-operator|+
-name|parts
-index|[
-literal|0
-index|]
-operator|+
-literal|", "
-operator|+
-name|parts
-index|[
-literal|2
-index|]
-operator|+
-literal|", "
-operator|+
-name|parts
-index|[
-literal|3
-index|]
-operator|+
-literal|", "
-operator|+
-name|parts
-index|[
-literal|1
-index|]
-operator|+
-literal|")"
-argument_list|)
-expr_stmt|;
-block|}
-comment|//else likely eventual exception
-block|}
 comment|//Solr expects us to remove the parameters we've used.
 name|MapListener
 argument_list|<
@@ -1557,31 +1432,24 @@ argument_list|,
 literal|"empty string shape"
 argument_list|)
 throw|;
-comment|//In Solr trunk we only support "lat, lon" (or x y) as an additional format; in v4.0 we do the
-comment|// weird Circle& Rect formats too (Spatial4j LegacyShapeReadWriterFormat).
-try|try
-block|{
-name|Shape
-name|shape
-init|=
-name|LegacyShapeReadWriterFormat
-operator|.
-name|readShapeOrNull
-argument_list|(
-name|str
-argument_list|,
-name|ctx
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
-name|shape
-operator|!=
-literal|null
+name|Character
+operator|.
+name|isLetter
+argument_list|(
+name|str
+operator|.
+name|charAt
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
 condition|)
-return|return
-name|shape
-return|;
+block|{
+comment|//WKT starts with a letter
+try|try
+block|{
 return|return
 name|ctx
 operator|.
@@ -1640,6 +1508,20 @@ argument_list|,
 name|e
 argument_list|)
 throw|;
+block|}
+block|}
+else|else
+block|{
+return|return
+name|SpatialUtils
+operator|.
+name|parsePointSolrException
+argument_list|(
+name|str
+argument_list|,
+name|ctx
+argument_list|)
+return|;
 block|}
 block|}
 comment|/**    * Returns a String version of a shape to be used for the stored value. This method in Solr is only called if for some    * reason a Shape object is passed to the field type (perhaps via a custom UpdateRequestProcessor),    * *and* the field is marked as stored.<em>The default implementation throws an exception.</em>    *<p/>    * Spatial4j 0.4 is probably the last release to support SpatialContext.toString(shape) but it's deprecated with no    * planned replacement.  Shapes do have a toString() method but they are generally internal/diagnostic and not    * standard WKT.    * The solution is subclassing and calling ctx.toString(shape) or directly using LegacyShapeReadWriterFormat or    * passing in some sort of custom wrapped shape that holds a reference to a String or can generate it.    */
