@@ -120,22 +120,6 @@ end_import
 
 begin_import
 import|import
-name|com
-operator|.
-name|spatial4j
-operator|.
-name|core
-operator|.
-name|shape
-operator|.
-name|impl
-operator|.
-name|RectangleImpl
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -157,34 +141,6 @@ operator|.
 name|common
 operator|.
 name|SolrException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|schema
-operator|.
-name|AbstractSpatialFieldType
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|schema
-operator|.
-name|IndexSchema
 import|;
 end_import
 
@@ -2307,200 +2263,6 @@ literal|"/response/docs/[0]/score==0.99862987"
 comment|//dist to 3,5
 argument_list|)
 expr_stmt|;
-block|}
-annotation|@
-name|Test
-DECL|method|solr4OldShapeSyntax
-specifier|public
-name|void
-name|solr4OldShapeSyntax
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|assumeFalse
-argument_list|(
-literal|"Mostly just valid for prefix-tree"
-argument_list|,
-name|fieldName
-operator|.
-name|equals
-argument_list|(
-literal|"pointvector"
-argument_list|)
-argument_list|)
-expr_stmt|;
-comment|//we also test that the old syntax is parsed in worldBounds in the schema
-block|{
-name|IndexSchema
-name|schema
-init|=
-name|h
-operator|.
-name|getCore
-argument_list|()
-operator|.
-name|getLatestSchema
-argument_list|()
-decl_stmt|;
-name|AbstractSpatialFieldType
-name|type
-init|=
-operator|(
-name|AbstractSpatialFieldType
-operator|)
-name|schema
-operator|.
-name|getFieldTypeByName
-argument_list|(
-literal|"stqpt_u_oldworldbounds"
-argument_list|)
-decl_stmt|;
-name|SpatialContext
-name|ctx
-init|=
-name|type
-operator|.
-name|getStrategy
-argument_list|(
-literal|"foo"
-argument_list|)
-operator|.
-name|getSpatialContext
-argument_list|()
-decl_stmt|;
-name|assertEquals
-argument_list|(
-operator|new
-name|RectangleImpl
-argument_list|(
-literal|0
-argument_list|,
-literal|1000
-argument_list|,
-literal|0
-argument_list|,
-literal|1000
-argument_list|,
-name|ctx
-argument_list|)
-argument_list|,
-name|ctx
-operator|.
-name|getWorldBounds
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-comment|//syntax supported in Solr 4 but not beyond
-comment|//   See Spatial4j LegacyShapeReadWriterFormat
-name|String
-name|rect
-init|=
-literal|"-74.093 41.042 -69.347 44.558"
-decl_stmt|;
-comment|//minX minY maxX maxY
-name|String
-name|circ
-init|=
-literal|"Circle(4.56,1.23 d=0.0710)"
-decl_stmt|;
-comment|//show we can index this (without an error)
-name|assertU
-argument_list|(
-name|adoc
-argument_list|(
-literal|"id"
-argument_list|,
-literal|"rect"
-argument_list|,
-name|fieldName
-argument_list|,
-name|rect
-argument_list|)
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-operator|!
-name|fieldName
-operator|.
-name|equals
-argument_list|(
-literal|"bbox"
-argument_list|)
-condition|)
-block|{
-name|assertU
-argument_list|(
-name|adoc
-argument_list|(
-literal|"id"
-argument_list|,
-literal|"circ"
-argument_list|,
-name|fieldName
-argument_list|,
-name|circ
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertU
-argument_list|(
-name|commit
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-comment|//only testing no error
-name|assertJQ
-argument_list|(
-name|req
-argument_list|(
-literal|"q"
-argument_list|,
-literal|"{!field f="
-operator|+
-name|fieldName
-operator|+
-literal|"}Intersects("
-operator|+
-name|rect
-operator|+
-literal|")"
-argument_list|)
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-operator|!
-name|fieldName
-operator|.
-name|equals
-argument_list|(
-literal|"bbox"
-argument_list|)
-condition|)
-block|{
-name|assertJQ
-argument_list|(
-name|req
-argument_list|(
-literal|"q"
-argument_list|,
-literal|"{!field f="
-operator|+
-name|fieldName
-operator|+
-literal|"}Intersects("
-operator|+
-name|circ
-operator|+
-literal|")"
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 annotation|@
 name|Test
